# ipcprims

./: .gitattributes  .gitignore  .yamlfmt  .yamllint  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MAINTAINERS.md  Makefile  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  cbindgen.toml  deny.toml  go.mod  go.work
.github/: actionlint.yaml
.github/workflows/: ci.yml  go-bindings.yml  msrv-matrix.yml  release.yml  typescript-bindings.yml  typescript-napi-prebuilds.yml  typescript-npm-publish.yml
.goneat/: assess.yaml  dependencies.yaml  hooks.yaml  tools.yaml
bindings/go/ipcprims/: cgo_darwin_amd64.go  cgo_darwin_arm64.go  cgo_linux_amd64.go  cgo_linux_arm64.go  error.go  ffi_bridge_cgo.go  ffi_bridge_stub.go  frame.go  go.mod  ipcprims.go  ipcprims_test.go  listener.go  peer.go  schema.go
bindings/go/ipcprims/include/: .gitignore  ipcprims.h
bindings/go/ipcprims/lib/: .gitignore
bindings/go/ipcprims/lib-shared/darwin-amd64/: libipcprims_ffi.dylib
bindings/go/ipcprims/lib-shared/darwin-arm64/: libipcprims_ffi.dylib
bindings/typescript/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json  tsconfig.json  tsconfig.test.json
bindings/typescript/__tests__/: ipcprims.test.ts
bindings/typescript/npm/darwin-arm64/: package.json
bindings/typescript/npm/linux-arm64-gnu/: package.json
bindings/typescript/npm/linux-x64-gnu/: package.json
bindings/typescript/npm/linux-x64-musl/: package.json
bindings/typescript/npm/win32-x64-msvc/: package.json
bindings/typescript/src/: error.rs  frame.rs  lib.rs  listener.rs  peer.rs  schema.rs
config/agentic/roles/: README.md  cicd.yaml  deliverylead.yaml  devlead.yaml  devrev.yaml  infoarch.yaml  qa.yaml  releng.yaml  secrev.yaml
crates/ipcprims/: Cargo.toml  build.rs
crates/ipcprims-ffi/: Cargo.toml
crates/ipcprims-ffi/src/: error.rs  frame.rs  lib.rs  peer.rs  schema.rs  transport.rs  types.rs
crates/ipcprims-frame/: Cargo.toml
crates/ipcprims-frame/src/: async_codec.rs  channel.rs  codec.rs  error.rs  lib.rs  reader.rs  writer.rs
crates/ipcprims-peer/: Cargo.toml
crates/ipcprims-peer/src/: async_connector.rs  async_listener.rs  async_peer.rs  connector.rs  control.rs  error.rs  handshake.rs  lib.rs  listener.rs  peer.rs
crates/ipcprims-schema/: Cargo.toml
crates/ipcprims-schema/src/: config.rs  error.rs  lib.rs  registry.rs  validator.rs
crates/ipcprims-transport/: Cargo.toml
crates/ipcprims-transport/src/: async_npipes.rs  async_uds.rs  error.rs  lib.rs  npipes.rs  traits.rs  uds.rs
crates/ipcprims/examples/: async-echo-server.rs  async-gateway.rs  echo-server.rs  multi-channel.rs
crates/ipcprims/src/: exit.rs  lib.rs  logging.rs  main.rs  output.rs
crates/ipcprims/src/cmd/: doctor.rs  echo.rs  envinfo.rs  info.rs  listen.rs  mod.rs  send.rs  version.rs
crates/ipcprims/tests/: cli_p0_regressions.rs  cli_p1_commands.rs
docs/: architecture.md  cicd.md
docs/decisions/: ADR-0001-async-peer-receive-model.md  DDR-0001-transport-scope.md  DDR-0002-cli-design-precepts.md  README.md  SDR-0001-schema-validation-scope.md  SDR-0002-peer-transport-hardening-defaults.md  SDR-0003-schema-registry-hardening-boundaries.md  SDR-0004-auth-token-and-credentials-boundary.md  SDR-0005-ordering-and-replay-boundary.md
docs/guides/: cli-dogfooding.md  development.md  npm-publishing.md  windows-arm64-rough-edges.md  windows-dev-setup.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.2.0.md  v0.2.1.md
internal/gowork/: doc.go
scripts/: check-version.sh  commit-template-ai.txt  download-release-assets.sh  export-release-keys.sh  generate-checksums.sh  release-guard-tag-version.sh  sign-release-assets.sh  upload-release-assets.sh  verify-public-keys.sh  verify-signatures.sh
scripts/dogfood/: cli-matrix.sh
scripts/windows/: vcvars64-path.ps1
tests/ffi/: smoke.c
tests/fixtures/schemas/: command.schema.json
