[workspace]
resolver = "2"
members = [
    "crates/ipcprims-transport",
    "crates/ipcprims-frame",
    "crates/ipcprims-schema",
    "crates/ipcprims-peer",
    "crates/ipcprims-ffi",
    "bindings/typescript",
    "crates/ipcprims",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/3leaps/ipcprims"
homepage = "https://github.com/3leaps/ipcprims"
authors = ["3leaps Architecture Council"]
keywords = ["ipc", "pipes", "sockets", "framing", "unix"]
categories = ["os", "network-programming"]

[workspace.dependencies]
# Internal dependencies
ipcprims-transport = { version = "0.1.2", path = "crates/ipcprims-transport" }
ipcprims-frame = { version = "0.1.2", path = "crates/ipcprims-frame" }
ipcprims-schema = { version = "0.1.2", path = "crates/ipcprims-schema" }
ipcprims-peer = { version = "0.1.2", path = "crates/ipcprims-peer" }
ipcprims-ffi = { version = "0.1.2", path = "crates/ipcprims-ffi" }

# Core
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tracing = "0.1"

# Async (feature-gated)
tokio = { version = "1", features = ["io-util", "net", "rt-multi-thread", "macros", "sync"] }

# Schema validation (feature-gated)
jsonschema = "0.41"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
comfy-table = "7"

# Platform-specific
libc = "0.2"
windows-sys = { version = "0.61", features = [
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
] }
