[package]
name = "ipcprims-napi"
version.workspace = true
edition.workspace = true
# NOTE: napi-build requires rustc >= 1.88.
rust-version = "1.88.0"
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Node-API addon for @3leaps/ipcprims"

[lib]
crate-type = ["cdylib"]
test = false

[dependencies]
napi = { version = "2.16.16", default-features = false, features = ["napi8"] }
napi-derive = "2.16.13"
ipcprims-peer = { workspace = true, features = ["schema"] }
ipcprims-frame.workspace = true
ipcprims-schema.workspace = true

[build-dependencies]
napi-build = "2.1.4"
