[package]
name = "ipcprims-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "C-ABI exports for ipcprims"

[lib]
crate-type = ["staticlib", "cdylib"]

[features]
default = []
schema = ["dep:ipcprims-schema", "ipcprims-peer/schema"]

[dependencies]
ipcprims-frame.workspace = true
ipcprims-peer.workspace = true
ipcprims-schema = { workspace = true, optional = true }
