[package]
name = "ipcprims-frame"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Length-prefixed message framing with channel multiplexing for IPC"

[dependencies]
ipcprims-transport.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true

[features]
default = []
async = ["ipcprims-transport/async", "dep:tokio"]

[dependencies.tokio]
workspace = true
optional = true
