[package]
name = "ipcprims-frame"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Length-prefixed message framing with channel multiplexing for IPC"

[dependencies]
ipcprims-transport.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true

[features]
default = []
async = ["ipcprims-transport/async", "dep:tokio", "dep:tokio-util"]

[dependencies.tokio]
workspace = true
optional = true

[dependencies.tokio-util]
workspace = true
optional = true

[dev-dependencies]
futures-util = "0.3"
