[package]
name = "ipcprims-schema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Optional JSON Schema validation at the IPC transport boundary"

[dependencies]
ipcprims-frame.workspace = true
jsonschema.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
