[package]
name = "ipcprims-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Cross-platform IPC transport abstraction (UDS, named pipes)"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[features]
default = []
async = ["dep:tokio"]

[dependencies.tokio]
workspace = true
optional = true
